<resources>
    <string name="app_name">AndroidCalculator</string>
    <string name="AC">AC</string>
    <string name="plusMinus">±</string>
    <string name="percent">%</string>
    <string name="divider">÷</string>
    <string name="multiplication">x</string>
    <string name="minus">—</string>
    <string name="plus">+</string>
    <string name="dot">.</string>
    <string name="equals">=</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="Select_theme">Select theme</string>
    <string name="theme_1">Light</string>
    <string name="theme_2">Dark</string>
    <string name="theme_3">theme 3</string>
    <string name="startText">0</string>
    <string name="click_me">CLICk ME</string>
</resources>