<?xml version="1.0" encoding="utf-8"?><!--
В качестве макета был выбран GridLayout так как он позволяет выполнить требуемую задачу
без многократной вложенности, имеет простую настройку ячеек, что способствует быстрому и
простому проектированию, а также такой подход не нагружает ресурсы.
-->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background"
    tools:context=".ui.CalculatorActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="262dp"
        android:layout_marginTop="20dp"
        android:gravity="bottom"
        android:text="@string/startText"
        android:textAlignment="viewEnd"
        android:textColor="?attr/textColor"
        android:textSize="@dimen/textViewSize"
        tools:ignore="RtlCompat" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/theme1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/theme_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/theme2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/theme_2" />


    </GridLayout>


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="380dp"
        android:columnCount="4">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ac"
            style="?attr/calcServiceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/commonMargin"
            android:text="@string/AC" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/plusMinus"
            style="?attr/calcServiceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/commonMargin"
            android:text="@string/plusMinus" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/percent"
            style="?attr/calcServiceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/commonMargin"
            android:text="@string/percent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/divider"
            style="?attr/calcOperationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/commonMargin"
            android:text="@string/divider" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/seven"
            style="@style/Theme.AndroidCalculator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/commonMargin"
            android:text="@string/seven" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/eight"
            style="@style/Theme.AndroidCalculator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/commonMargin"
            android:text="@string/eight" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nine"
            style="@style/Theme.AndroidCalculator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/commonMargin"
            android:text="@string/nine" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/multiplication"
            style="?attr/calcOperationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/commonMargin"
            android:text="@string/multiplication" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/four"
            style="@style/Theme.AndroidCalculator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/commonMargin"
            android:text="@string/four" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/five"
            style="@style/Theme.AndroidCalculator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/commonMargin"
            android:text="@string/five" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/six"
            style="@style/Theme.AndroidCalculator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/commonMargin"
            android:text="@string/six" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/minus"
            style="?attr/calcOperationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/commonMargin"
            android:text="@string/minus" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/one"
            style="@style/Theme.AndroidCalculator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/commonMargin"
            android:text="@string/one" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/two"
            style="@style/Theme.AndroidCalculator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/commonMargin"
            android:text="@string/two" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/three"
            style="@style/Theme.AndroidCalculator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/commonMargin"
            android:text="@string/three" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/plus"
            style="?attr/calcOperationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/commonMargin"
            android:text="@string/plus" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/zero"
            style="@style/Theme.AndroidCalculator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="@dimen/commonMargin"
            android:text="@string/zero" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dot"
            style="@style/Theme.AndroidCalculator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/commonMargin"
            android:text="@string/dot" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/equals"
            style="?attr/calcOperationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/commonMargin"
            android:text="@string/equals" />

    </GridLayout>

</FrameLayout>